--- a/web_components/geonet-footer/geonet-footer.html
+++ b/web_components/geonet-footer/geonet-footer.html
@@ -3,6 +3,8 @@
     <head>
         <title>GeoNet Footer</title>
         <script src="./geonet-footer.js" type="module"></script>
+        <link href="../bootstrap/bootstrap.v5.min.css" rel="stylesheet">
+        <link href="../font/font-awesome.min.css" rel="stylesheet">
     </head>
     <body>
         <geonet-footer />
