--- a/web_components/geonet-header-basic/geonet-header-basic.html
+++ b/web_components/geonet-header-basic/geonet-header-basic.html
@@ -9,10 +9,10 @@
     </head>
     <body>
         <geonet-header-basic
-            title="Placeholder title"
-            titleURL="https://www.geonet.org.nz"
-            links="Google,MetService,TVNZ"
-            linkURLs="https://www.google.co.nz,https://www.metservice.co.nz,https://www.tvnz.co.nz"
+            title="Field Time Series (FITS)"
+            titleURL="https://fits.geonet.org.nz"
+            links="API Documentation,Data Discovery,Tutorials"
+            linkURLs="https://fits.geonet.org.nz/api-docs,https://fits.geonet.org.nz,https://www.geonet.org.nz/data/tools/FITS"
             isExternal="false,false,true"
         >
         </geonet-header-basic>
