--- a/web_components/geonet-header/geonet-header.html
+++ b/web_components/geonet-header/geonet-header.html
@@ -5,11 +5,18 @@
         <script src="./geonet-header.js" type="module"></script>
         <script src="../bootstrap/bootstrap.v5.min.js" type="application/javascript"></script>
         <link href="../bootstrap/bootstrap.v5.min.css" rel="stylesheet">
+        <link href="../font/font-awesome.min.css" rel="stylesheet">
     </head>
     <body>
         <geonet-header
-            title="Placeholder title"
-            titleURL="https://www.geonet.org.nz"
+            origin=""
+            earthquake="true"
+            landslide="false"
+            tsunami="false"
+            volcano="false"
+            datadiscovery="false"
+            datatypes="false"
+            dataaccess="false"
         >
         </geonet-header>
     </body>
